# mixture-of-experts-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: cifar10.yaml
notebooks/: MNIST_baseline.ipynb  MNIST_testing_notebook.ipynb  MoE_MNIST_Hard.ipynb  MoE_MNIST_Soft.ipynb  cifar100_baseline.ipynb  cifar10_baseline.ipynb  cifar10_softmoe_noreg_fixed.ipynb
scripts/: train_cifar10.py
scripts/CUB/: requirements-cub.txt  train_cnn.py
scripts/CUB/utils/: __init__.py  calculate_flops.py  csv_logger.py  data_process.py  plot_metrics.py
scripts/MNIST/: load_mnist.py  train_mnist.py
src/mixture_of_experts_project.egg-info/: PKG-INFO  SOURCES.txt
src/moe/: __init__.py  moe_mnist.py
src/moe/data/: __init__.py  cifar10_data.py
src/moe/heads/: __init__.py  base.py  dense.py  factory.py  soft_moe.py
src/moe/models/: __init__.py  backbones.py
src/moe/utils/: experts.py  gating.py  helpers.py  losses.py  visualization.py
