[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mixture-of-experts-project"
version = "0.0.1"
dependencies = ["torch", "torchvision", "tqdm", "numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


